k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central
  template:
    metadata:
      labels:
        app: central
    spec:
      containers:
        - name: central
          image: stanisica/cc-central:latest
          ports:
            - containerPort: 8080
        - name: mysql-db
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-db
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-db
          persistentVolumeClaim:
            claimName: mysql-db-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns
  template:
    metadata:
      labels:
        app: ns
    spec:
      containers:
        - name: ns
          image: stanisica/cc-city:latest
          ports:
            - containerPort: 8081
        - name: postgres-db-ns
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data-ns
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data-ns
          persistentVolumeClaim:
            claimName: postgres-db-pvc-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg
  template:
    metadata:
      labels:
        app: bg
    spec:
      containers:
        - name: bg
          image: stanisica/cc-city:latest
          ports:
            - containerPort: 8081
        - name: postgres-db-bg
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data-bg
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data-bg
          persistentVolumeClaim:
            claimName: postgres-db-pvc-bg

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nis
  template:
    metadata:
      labels:
        app: nis
    spec:
      containers:
        - name: nis
          image: stanisica/cc-city:latest
          ports:
            - containerPort: 8081
        - name: postgres-db-nis
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data-nis
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data-nis
          persistentVolumeClaim:
            claimName: postgres-data-pvc-nis
