k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central
spec:
  selector:
    app: central
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30003
  # ports:
  #   - protocol: TCP
  #     port: 8080 # kao EXPOSE, ali u okviru clustera
  #     targetPort: 8080 # port na kojem kontejner radi unutar poda

---
apiVersion: v1
kind: Service
metadata:
  name: ns
spec:
  selector:
    app: ns
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: bg
spec:
  selector:
    app: bg
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: nis
spec:
  selector:
    app: nis
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8081
