k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: library.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/central(/|$)(.*)"
        backend:
          service:
            name: central
            port: 
              number: 8080
      - pathType: ImplementationSpecific
        path: "/ns(/|$)(.*)"
        backend:
          service:
            name: ns
            port: 
              number: 8081
      - pathType: ImplementationSpecific
        path: "/bg(/|$)(.*)"
        backend:
          service:
            name: bg
            port: 
              number: 8082
      - pathType: ImplementationSpecific
        path: "/nis(/|$)(.*)"
        backend:
          service:
            name: nis
            port: 
              number: 8083
